# dzcz-ops-skill

./: .gitignore  README.md  merchant-ops.ps1  pyproject.toml
docs/superpowers/plans/: 2026-06-14-architecture-redesign.md  2026-06-14-hermes-scheduler.md  2026-06-14-p0-login-error-recovery.md  2026-06-14-workflow-optimization.md
docs/superpowers/specs/: 2026-06-14-architecture-redesign-design.md  2026-06-14-hermes-scheduler-design.md
dzcz_merchant_ops/: __init__.py  cli.py  diagnostics.py  failure_reporter.py  workflow_manager.py  workflow_schema.py
dzcz_merchant_ops/config/: __init__.py  platform.py
dzcz_merchant_ops/core/: __init__.py  context.py  errors.py  intervention.py  pipeline.py  recovery.py  retry.py  step.py
dzcz_merchant_ops/hermes/: __init__.py  resource_manager.py  scheduler.py  task_queue.py
dzcz_merchant_ops/monitor/: __init__.py  logger.py  metrics.py
dzcz_merchant_ops/scheduler/: __init__.py  lock.py
dzcz_merchant_ops/steps/: __init__.py  login.py
skills/hermes/dzcz-merchant-ops/: SKILL.md
tests/: integration_test.py  test_cli_task_run.py  test_workflows.py
tests/integration/: test_login_pipeline.py
tests/unit/: __init__.py  test_context.py  test_diagnostics.py  test_errors.py  test_failure_reporter.py  test_intervention.py  test_lock.py  test_logger.py  test_login_step.py  test_metrics.py  test_pipeline.py  test_platform.py  test_recovery.py  test_resource_manager.py  test_retry.py  test_scheduler.py  test_step.py  test_task_queue.py  test_workflow_manager.py  test_workflow_schema.py
